--- a/BackendApi/Helm/templates/service.yaml
+++ b/BackendApi/Helm/templates/service.yaml
@@ -2,12 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.service.name }}
+  labes:
+    app: {{ .Values.name }}
   # namespace: dev
 spec:
+  type: {{ .Values.service.type }}
   selector:
     app: {{ .Values.name }}
   ports:
   - protocol: TCP
     port: {{ .Values.service.port }}
     targetPort: {{ .Values.container.port }}
-  type: {{ .Values.service.type }}
