--- a/BackendApi/Helm/values.yaml
+++ b/BackendApi/Helm/values.yaml
@@ -31,17 +31,17 @@ service:
   name: backend
 
 resources: 
-  limits:
-   cpu: 100m
-   memory: 128Mi
   requests:
    cpu: 100m
    memory: 128Mi
+  limits:
+   cpu: 500m
+   memory: 256Mi
 
 mongo:
-  connectionstring: __replace__
-  database: __replace__
-  collection: __replace__
+  connectionstring: mongodb://user:Passw0rd!@todolist-mongo-mongodb.default.svc.cluster.local:27017/
+  database: todoitems
+  collection: todolist
 
 appinsights:
-  key: __replace__
+  key: b1e8f3c6-bd36-47bb-8de9-221b9848f78f
