--- a/BackendApi/Helm/values.yaml
+++ b/BackendApi/Helm/values.yaml
@@ -1,7 +1,3 @@
-# Default values for backend-api.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
 name: backend
 replicaCount: 2
 
@@ -26,7 +22,7 @@ container:
   port: 80
 
 service:
-  type: LoadBalancer
+  type: ClusterIP
   port: 80
   name: backend
 
