fixed type in ingress file

--- a/MultitierApi/Helm/templates/ingress.yaml
+++ b/MultitierApi/Helm/templates/ingress.yaml
@@ -11,6 +11,6 @@ spec:
     http:
       paths:
       - path: /
-        frontend:
+        backend:
           serviceName: {{ .Values.service.name }}
           servicePort: 80
