moved BackendAPI solution to inner folder. Moved index.html to root path. Added try/catch to controller

--- a/MultitierApi/appsettings.json
+++ b/MultitierApi/appsettings.json
@@ -5,7 +5,7 @@
       "Default": "Warning"
     }
   },
-  "backendurl": "http://backend/api/backend",
+  "backendurl": "http://backend-svc.default.svc.cluster.local",
   "ApplicationInsights": {
     "InstrumentationKey": "b1e8f3c6-bd36-47bb-8de9-221b9848f78f"
   }
