--- a/MultitierApi/FrontendApi.csproj
+++ b/MultitierApi/FrontendApi.csproj
@@ -36,7 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="wwwroot\app\TodoList.html">
+    <Content Update="wwwroot\TodoList.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
