Renamed backend controller and added missing endpoint url to frontend repository. Added test backend controller.

--- a/.gitignore
+++ b/.gitignore
@@ -332,3 +332,4 @@ ASALocalRun/
 /MultitierApi/Dockerfile.develop
 /MultitierApi/BackendApi/azds.yaml
 /MultitierApi/BackendApi/Dockerfile.develop
+/MultitierApi/BackendApi/charts/backendapi
