--- a/MultitierApi/FrontendApi.csproj
+++ b/MultitierApi/FrontendApi.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <DockerComposeProjectPath>..\TodoApi\docker-compose.dcproj</DockerComposeProjectPath>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <ApplicationInsightsResourceId>/subscriptions/f0cf2edb-86a7-44b6-9c02-9c5fee5c618d/resourcegroups/AksWorkshop/providers/microsoft.insights/components/AksWorkshopAppInsights</ApplicationInsightsResourceId>
@@ -16,15 +16,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="4.9.2" />
-    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.4.0" />
-    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.6.1" />
+    <PackageReference Include="Autofac" Version="5.2.0" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.14.0" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" /> 
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.9" /> 
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" /> 
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1" /> 
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.4.10" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.8" /> 
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.8" /> 
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.8" /> 
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" /> 
+    <PackageReference Include="Polly" Version="7.2.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.0" />
   </ItemGroup>
 
   <ItemGroup>
